[project]
name = "bench-47pkg"
version = "0.0.1"
dependencies = [
    "pkg01>=1.0",
    "pkg02>=1.0",
    "pkg03>=1.0",
    "pkg04>=1.0",
    "pkg05>=1.0",
    "pkg06>=1.0",
    "pkg07>=1.0",
    "pkg08>=1.0",
    "pkg09>=1.0",
    "pkg10>=1.0",
    "pkg11>=1.0",
    "pkg12>=1.0",
    "pkg13>=1.0",
    "pkg14>=1.0",
    "pkg15>=1.0",
    "pkg16>=1.0",
    "pkg17>=1.0",
    "pkg18>=1.0",
    "pkg19>=1.0",
    "pkg20>=1.0",
    "pkg21>=1.0",
    "pkg22>=1.0",
    "pkg23>=1.0",
    "pkg24>=1.0",
    "pkg25>=1.0",
    "pkg26>=1.0",
    "pkg27>=1.0",
    "pkg28>=1.0",
    "pkg29>=1.0",
    "pkg30>=1.0",
    "pkg31>=1.0",
    "pkg32>=1.0",
    "pkg33>=1.0",
    "pkg34>=1.0",
    "pkg35>=1.0",
    "pkg36>=1.0",
    "pkg37>=1.0",
    "pkg38>=1.0",
    "pkg39>=1.0",
    "pkg40>=1.0",
    "pkg41>=1.0",
    "pkg42>=1.0",
    "pkg43>=1.0",
    "pkg44>=1.0",
    "pkg45>=1.0",
    "pkg46>=1.0",
    "pkg47>=1.0",
]
